--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/header";
+@import "blocks/page";
+@import "blocks/icon";
+@import "blocks/events";
+@import "blocks/menu";
+@import "blocks/gallery";
+@import "blocks/follow";
+@import "blocks/section";
+@import "blocks/footer";
 
 body {
-  background: $c-gray;
+  background: $c-white;
 }
