Lading page one

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,530 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+.main {
+  margin-top: 200px;
 
-body {
-  background: $c-gray;
+  @include onTablet {
+    margin-top: 88px;
+  }
+
+  @include onMobile {
+    margin-top: 70px;
+  }
+
+  &__title-events {
+    margin-bottom: 56px;
+    color: #0f0e08;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+
+    @include onTablet {
+      margin-bottom: 48px;
+    }
+
+    @include onMobile {
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+  }
+
+  &__event-exhibition {
+    display: flex;
+    align-items: center;
+    margin-bottom: 104px;
+
+    @include onTablet {
+      display: block;
+      margin-bottom: 64px;
+    }
+
+    @include onMobile {
+      display: block;
+      margin-bottom: 60px;
+    }
+  }
+
+  &__exhibition-img {
+    transition-duration: 500ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      width: 100%;
+      height: 520px;
+    }
+
+    @include onMobile {
+      height: 210px;
+      width: 100%;
+    }
+  }
+
+  &__exhibition-content {
+    margin-left: 130px;
+
+    @include onTablet {
+      margin-left: 0;
+    }
+
+    @include onMobile {
+      margin-left: 0;
+    }
+  }
+
+  &__exhibition-block {
+    margin-bottom: 30px;
+
+    @include onTablet {
+      margin-top: 40px;
+      margin-bottom: 30px;
+    }
+
+    @include onMobile {
+      margin: 16px 0 10px;
+    }
+  }
+
+  &__exhibition {
+    color: #687480;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    margin-right: 24px;
+
+    @include onMobile {
+      font-size: 16px;
+    }
+  }
+
+  &__exhibition-num {
+    color: #1a5a4c;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+
+    @include onMobile {
+      font-size: 16px;
+    }
+  }
+
+  &__exhibition-subtitle {
+    position: relative;
+    margin-bottom: 15px;
+    color: #0f0e08;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+
+    @include onMobile {
+      font-size: 28px;
+    }
+  }
+
+  &__subtitle-icon {
+    position: absolute;
+    top: 12px;
+    margin-left: 10px;
+
+    @include onMobile {
+      width: 10px;
+      height: 10px;
+    }
+  }
+
+  &__event-text {
+    color: #4e4e4e;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 150%;
+
+    @include onTablet {
+      width: 460px;
+    }
+  }
+
+  &__event-lecture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+
+  &__lecture-bg {
+    object-fit: cover;
+    object-position: center;
+    height: 550px;
+    width: 100%;
+
+    @include onTablet {
+      margin-top: 48px;
+      height: 390px;
+      width: 700px;
+    }
+
+    @include onMobile {
+      height: 210px;
+      width: 320px;
+    }
+  }
+
+  &__lecture-content {
+    position: absolute;
+    padding: 45px 100px 50px;
+    top: 80%;
+    width: 570px;
+    height: 204px;
+    background: #fff;
+    box-shadow: 0 2px rgba(26, 90, 76, 0.25);
+
+    @include onMobile {
+      padding: 20px 0;
+      height: 140px;
+      width: 280px;
+    }
+  }
+
+  &__lecture-block {
+    @include onMobile {
+      margin-left: 21px;
+    }
+  }
+
+  &__lecture {
+    margin-right: 146px;
+    text-transform: uppercase;
+    color: #687480;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+
+    @include onMobile {
+      margin-right: 28px;
+      font-size: 16px;
+    }
+  }
+
+  &__lecture-num {
+    color: #1a5a4c;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+
+    @include onMobile {
+      font-size: 16px;
+    }
+  }
+
+  &__lecture-subtitle {
+    margin-top: 24px;
+    color: #0f0e08;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+
+    @include onMobile {
+      text-align: center;
+      font-size: 28px;
+      margin-top: 20px;
+    }
+  }
+
+  &__galery {
+    margin-top: 302px;
+
+    @include onTablet {
+      margin-top: 208px;
+    }
+
+    @include onMobile {
+      margin-top: 183px;
+    }
+  }
+
+  &__galery-content {
+    @include onTablet {
+      display: flex;
+      overflow-x: auto;
+    }
+
+    @include onMobile {
+      display: flex;
+      overflow-x: auto;
+    }
+  }
+
+  &__title-galery {
+    margin-bottom: 56px;
+    color: #0f0e08;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+
+    @include onTablet {
+      margin-bottom: 48px;
+    }
+
+    @include onMobile {
+      font-size: 36px;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+  }
+
+  &__content-top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+
+    @include onTablet {
+      margin-bottom: 0;
+      margin-right: 20px;
+    }
+
+    @include onMobile {
+      margin-bottom: 0;
+      margin-right: 16px;
+    }
+  }
+
+  &__picture-one {
+    background-image: url(/images/galery-img-1.png);
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 370px;
+    transition-duration: 500ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      background-image: url(/images/Tablet-galery-img-1.png);
+      height: 543px;
+      width: 340px;
+      margin-right: 20px;
+    }
+
+    @include onMobile {
+      background-image: url(/images/Mobile-galery-img-1.png);
+      height: 410px;
+      width: 280px;
+      margin-right: 16px;
+    }
+  }
+
+  &__picture-two {
+    background-image: url(/images/galery-img-2.png);
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 770px;
+    transition-duration: 500ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      background-image: url(/images/Tablet-galery-img.png);
+      height: 543px;
+      width: 340px;
+    }
+
+    @include onMobile {
+      background-image: url(/images/Mobile-galery-img.png);
+      height: 410px;
+      width: 280px;
+    }
+  }
+
+  &__content-bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__picture-three {
+    background-image: url(/images/galery-img-3.png);
+    background-repeat: no-repeat;
+    height: 360px;
+    width: 770px;
+    transition-duration: 500ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      background-image: url(/images/Tablet-galery-img-3.png);
+      height: 543px;
+      width: 340px;
+      margin-right: 20px;
+    }
+
+    @include onMobile {
+      background-image: url(/images/Mobile-galery-img-3.png);
+      width: 280px;
+      height: 410px;
+      margin-right: 16px;
+    }
+  }
+
+  &__picture-four {
+    background-image: url(/images/galery-img-4.png);
+    background-repeat: no-repeat;
+    height: 360px;
+    width: 370px;
+    transition-duration: 500ms;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      background-image: url(/images/Tablet-galery-img-4.png);
+      height: 543px;
+      width: 340px;
+    }
+
+    @include onMobile {
+      background-image: url(/images/Mobile-galery-img-4.png);
+      height: 410px;
+      width: 280px;
+    }
+  }
+
+  &__subscription {
+    margin-top: 200px;
+
+    @include onTablet {
+      margin-top: 133px;
+    }
+
+    @include onMobile {
+      margin-top: 129px;
+    }
+  }
+
+  &__subscription-bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(/images/subscription-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 550px;
+
+    @include onTablet {
+      height: 380px;
+    }
+
+    @include onMobile {
+      height: 386px;
+    }
+  }
+
+  &__title-subscription {
+    margin-bottom: 16px;
+    text-align: center;
+    color: #fff;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
+
+    @include onMobile {
+      margin-bottom: 20px;
+      font-size: 36px;
+    }
+  }
+
+  &__email-form {
+    display: flex;
+
+    @include onMobile {
+      justify-content: center;
+    }
+  }
+
+  &__subscription-email {
+    margin-right: 30px;
+    border: none;
+    height: 70px;
+    width: 470px;
+    padding: 0 0 0 26px;
+    color: #687480;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+
+    @include onTablet {
+      width: 370px;
+      padding: 0 0 0 24px;
+      margin-right: 16px;
+    }
+
+    @include onMobile {
+      width: 230px;
+      height: 50px;
+      padding: 0 0 0 24px;
+      margin-right: 0;
+    }
+  }
+
+  &__subscription-text {
+    color: #fff;
+    text-align: center;
+    font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    margin-bottom: 72px;
+
+    @include onMobile {
+      font-size: 18px;
+      line-height: 150%;
+      margin-bottom: 50px;
+      width: 280px;
+    }
+  }
+
+  &__subscription-button {
+    display: block;
+    border: none;
+    cursor: pointer;
+    background-image: url(/images/subscription-button-icon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #f14a27;
+    width: 70px;
+    height: 70px;
+
+    @include onMobile {
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
