fix some problems

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -22,7 +22,7 @@
   &__img {
     width: 280px;
     height: 410px;
-    @include hover(transform, scale(1.04));
+    @include hover(transform, scale(1.03));
     transition: $transition-time;
     cursor: pointer;
     &--small {
@@ -103,9 +103,13 @@
 .carousel {
   display: flex;
   padding-top: 40px;
-  column-gap: 16px;
+  column-gap: 50px;
   overflow: hidden;
   padding-bottom: 20px;
+
+  // @include onTablet {
+  //   column-gap: 20px
+  // }
 
   @include onDesktop {
     @include pageGrid;
