create museum landing v1

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,51 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  color: #000;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 51px;
+    line-height: 120%;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  color: $subtitle-color;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  color: $subtitle-color;
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
   font-weight: 400;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%events-text {
+  color: $text-color;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 150%;
 }
