--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$subtitle-color: #0F0E08;
+$text-color: #4e4e4e;
+$secondary-color: #1a5a4c;
+$secondary-red: #f14a27;
+
+$tablet-min-width: 640px;
+$desktop-min-width: 1100px;
