Fixed links and icons

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -46,14 +46,14 @@
 
   &__icon-facebook {
     display: block;
-    background-image: url(/images/footer-facebook-icon.png);
+    background-image: url(/images/footer-facebook.svg);
     width: 24px;
     height: 24px;
   }
 
   &__icon-instagram {
     display: block;
-    background-image: url(/images/footer-instagram-icon.png);
+    background-image: url(/images/footer-instagram.svg);
     width: 24px;
     height: 24px;
     margin-left: 22px;
@@ -146,11 +146,21 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%;
+    width: 220px;
   }
 
   &__contacts-container {
     @include onTablet {
       width: 220px;
+    }
+  }
+
+  &__contacts-text {
+    text-decoration: none;
+    color: #0f0e08;
+
+    &:hover {
+      text-decoration: underline;
     }
   }
 
