--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -515,7 +515,7 @@
     display: block;
     border: none;
     cursor: pointer;
-    background-image: url(/images/subscription-button-icon.png);
+    background-image: url(/images/subscription-button-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #f14a27;
