--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -30,7 +30,7 @@
     display: block;
     height: 24px;
     width: 24px;
-    background-image: url(/images/close-icon.png);
+    background-image: url(/images/close-icon.svg);
   }
 
   &__content {
