--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -19,7 +19,7 @@
   }
 
   &__img {
-    background-image: url(/images/button-icon.png);
+    background-image: url(/images/button-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #1a5a4c;
