implement mobile version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,13 +59,12 @@ h3 {
     justify-content: space-between;
     margin-right: 113px;
   }
+}
 
-  &__main-logo {
-    width: 55px;
-    height: 61px;
-    background-image: url("../images/icons/NA-MU__logo.svg");
-  }
-
+.main-logo {
+  width: 55px;
+  height: 61px;
+  background-image: url("../images/icons/NA-MU__logo.svg");
 }
 
 .menu {
@@ -198,7 +197,7 @@ h3 {
     width: 100%;
     padding-bottom: 20px;
     text-align: center;
-    border-bottom: 2px solid $green;
+    border-bottom: 2px solid rgba(26, 90, 76, 0.25);
   }
 
   &__type {
@@ -213,4 +212,209 @@ h3 {
     font-weight: 700;
     line-height: 150%;
   }
+}
+
+.gallery {
+  margin-bottom: 100px;
+
+  &__title {
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  &__slider {
+    margin-bottom: 20px;
+  }
+
+  &__nav-buttons-box {
+    display: flex;
+    justify-content: space-between;
+    width: 102px;
+    height: 9px;
+    margin: 0 auto;
+  }
+}
+
+.hiden {
+  display: none;
+}
+
+.nav-button-item {
+  height: 9px;
+  width: 9px;
+  background-image: url("../images/icons/nav-button-grey.svg");
+}
+
+.active {
+  background-image: url("../images/icons/nav-button-green.svg");
+}
+
+.subscribe {
+  padding: 88px 20px;
+  text-align: center;
+  color: $white;
+  background-image: url("../images/blocks/subscribe/background.png");
+
+  &__title {
+    margin-bottom: 20px;
+  }
+  
+  &__text {
+    margin-bottom: 50px;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  &__form {
+    display: flex;
+  }
+
+  &__button {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: #f14a27;
+
+    &-arrow {
+      position: absolute;
+      transform: translate(50%, 50%);
+      width: 24px;
+      height: 24px;
+      background-image: url("../images/blocks/subscribe/arrow_black.svg");
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.form-field {
+  background-color: $white;
+  width: 230px;
+  height: 50px;
+
+  &::placeholder {
+    padding-left: 24px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+  }
+}
+
+.social {
+
+  &-links {
+    display: flex;
+    gap: 20px;
+  }
+
+  &-link {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.facebook-link {
+  background-image: url("../images/socials/facebook.svg");
+}
+
+.instagram-link {
+  background-image: url("../images/socials/instagram.svg");
+}
+
+.scroll-up__link {
+  position: absolute;
+  right: 20px;
+  bottom: -50px;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/footer/scroll-up_button.svg);
+
+  &::after {
+    content: "";
+    display: block;
+    background-image: url("../images/footer/arrow-up.svg");
+    width: 16px;
+    height: 16px;
+    transform: translate(100%, 100%);
+  }
+}
+
+.footer {
+  padding: 50px 20px;
+
+  &__top-action {
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    position: relative;
+    display: flex;
+    gap: 20px;
+    font-size: 14px;
+
+    &-wrapper {
+      margin-bottom: 40px;
+      padding-bottom: 70px;
+      border-bottom: 2px solid rgba(26, 90, 76, 0.5);
+    }
+  }
+
+  &__schedule {
+    width: 130px;
+
+    &-title {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__contacts {
+    width: 128px;
+
+    &-title {
+      margin-bottom: 20px;
+    }
+
+    &-item {
+      display: block;
+      color: $black;
+    }
+  }
+
+  &__menu {
+    font-size: 14px;
+    margin-bottom: 60px;
+
+    &-list {
+      display: flex;
+      gap: 20px;
+    }
+
+    &-item {
+      margin-bottom: 20px;
+    }
+
+    &-link {
+      color: $black;
+    }
+
+    &-column {
+      width: 130px;
+    }
+  }
+}
+
+.schedule {
+  &-time {
+    display: block;
+  }
+}
+
+.rights-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
 }
