remake slider by swiper, fix close button for menu, disable content on menu open

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,7 +9,6 @@
 
   &__body {
     min-width: 320px;
-
     margin: 0 auto;
 
     &:has(.page__menu:target) {
@@ -28,12 +27,12 @@
 
     transition: all $transitionDuration;
     opacity: 0;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     pointer-events: none;
 
     &:target {
       opacity: 1;
-      transform: translateX(0);
+      transform: translateY(0);
       pointer-events: all;
     }
 
