--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -44,6 +44,7 @@
     padding: 0;
     border: none;
     padding-left: 24px;
+    cursor: pointer;
 
     &::placeholder {
       font-family: "IBM Plex Sans", sans-serif;
@@ -89,6 +90,7 @@
     background-image: url(../images/buttons/subscribeButton.svg);
     background-position: center;
     border: none;
+    cursor: pointer;
 
     @include onTablette {
       height: 70px;
