--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,15 +1,16 @@
 .menu {
   font-family: "IBM Plex Sans", sans-serif;
-
+  height: 100%;
   font-size: 14px;
   line-height: 21px;
   font-weight: 600;
   display: flex;
   flex-direction: column;
   color: #fff;
+  background: rgba(196, 196, 196, 0.8);
 
   &__content {
-    padding: 27px 0 0;
+    padding-top: 27px;
     overflow-y: auto;
     display: grid;
     column-gap: 20px;
@@ -23,6 +24,7 @@
     @include onTablette {
       --columns: 6;
       column-gap: 30px;
+      padding-top: 50px;
     }
 
     @include onDesktop {
@@ -53,7 +55,7 @@
 
   &__top-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 28px;
     grid-column: span 2;
 
@@ -101,6 +103,18 @@
     font-weight: 500;
     font-size: 16px;
     text-align: left;
+
+    @include onTablette {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 16px;
+    }
+
+    @include onDesktop {
+      font-size: 22px;
+      font-weight: 500;
+      line-height: 24px;
+    }
 
     &--footer {
       display: block;
