--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$main-col: #0f0e08;
+$background-col: #fff;
+$bg-menu-col: #1a5a4c;
+$menu-text-col: #fff;
+$subtitle-col: #687480;
+$button-col: #f14a27;
+$seccond-col: #4e4e4e;
