--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./utils/normalize.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
