--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,6 +11,11 @@
   &__body {
     margin: 0;
     box-sizing: border-box;
+
+    &--with-menu {
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.5);
+    }
   }
 
   &__menu {
