--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -30,7 +30,7 @@
     &--small {
       @include onTablet {
         width: 340px;
-        height: 543px;
+        height: auto;
       }
 
       @include onDesktop {
@@ -48,6 +48,7 @@
       @include onDesktop {
         width: 100%;
         height: auto;
+      
       }
     }
 
@@ -88,18 +89,22 @@
   &-order {
     &--1 {
       grid-column: 1 / 5;
+      max-height: 600px;
     }
 
     &--2 {
       grid-column: 5 / -1;
+      max-height: 600px;
     }
 
     &--3 {
       grid-column: 1 / 9;
+      max-height: 400px;
     }
 
     &--4 {
       grid-column: 9 / -1;
+      max-height: 400px;
     }
   }
 }
