--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,6 +12,7 @@
     position: relative;
     width: 100%;
     height: 70vh;
+    max-height: 655px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
