--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -20,6 +20,10 @@
       justify-content: center;
       transition: 0.3s;
 
+      @include onTablet {
+        justify-self: center;
+      }
+
       &:hover {
         transform: scale(1.05);
       }
