--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,4 +1,5 @@
 .icon {
+  box-sizing: border-box;
   // width: 24px;
   // height: 24px;
   background-repeat: no-repeat;
@@ -13,7 +14,6 @@
     left: 0;
     top: 24px;
     background-image: url(..//images/icon/icon-burger-menu.svg);
-    transition: 0.3s;
 
     &:hover {
       transform: scale(1.2);
