--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -77,6 +77,8 @@
   }
 
   &__info {
+    position: relative;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -179,14 +181,17 @@
       display: block;
       position: absolute;
       transform: rotate(-90deg);
+      // grid-column: 1 / 2;
 
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 700;
       line-height: 100%;
       color: #687480;
-      top: 522px;
-      left: 0;
+      // top: 522px;
+      top: 316px;
+      left: -10px;
+      // padding: 0 55px;
 
       &::before {
         content: "";
