--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -56,7 +56,7 @@
     align-items: center;
     justify-content: space-between;
     grid-column: 1 / -1;
-    color: #0F0E08;
+    color: #0f0e08;
     font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: 400;
