--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -21,7 +21,6 @@
     grid-column: 1 / 4;
     margin-bottom: 20px;
 
-
     @include onTablet {
       grid-column: 4 / -1;
       grid-row: 1 / -1;
@@ -65,7 +64,6 @@
     margin-inline: auto;
     transition-duration: 0.3s;
 
-
     @include onTablet {
       width: 220px;
       height: 72px;
@@ -87,8 +85,6 @@
       margin: 0;
     }
 
-
-
     &-text {
       box-sizing: border-box;
       display: block;
@@ -97,7 +93,7 @@
       border: 1px solid $secondary-color;
       transition: all 0.5s;
 
-      color: #0F0E08;
+      color: #0f0e08;
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
