--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -23,7 +23,7 @@
   }
 
   &__nav {
-  margin: 27px 0 0 52px;
+    margin: 27px 0 0 52px;
   }
 
   &__line {
@@ -44,11 +44,11 @@
   }
 
   &__title {
-    color: #FFF;
+    color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
-    line-height: 140.625%;
+    line-height: 140.63%;
   }
 
   &__list {
@@ -58,7 +58,7 @@
   }
 
   &__item {
-    color: #FFF;
+    color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
@@ -74,7 +74,7 @@
   &__text {
     margin-block: 16px 27px;
     width: 280px;
-    color: #FFF;
+    color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 600;
