--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -29,7 +29,7 @@
   &__title {
     grid-column: 1 / -1;
 
-    color: #FFF;
+    color: #fff;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
@@ -48,7 +48,7 @@
 
   &__text {
     grid-column: 1 / -1;
-    color: #FFF;
+    color: #fff;
     text-align: center;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
@@ -83,7 +83,7 @@
     all: unset;
     box-sizing: border-box;
     background-color: #fff;
-    border: 0px solid #000;
+    border: 0 solid #000;
     height: 50px;
     width: 100%;
     padding: 18px 0 18px 24px;
