--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $c-gray: #eee;
-$subtitle-color: #0F0E08;
+$subtitle-color: #0f0e08;
 $text-color: #4e4e4e;
 $secondary-color: #1a5a4c;
 $secondary-red: #f14a27;
