--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -67,20 +67,22 @@
 
   &__link {
     all: unset;
-    color: #0F0E08;
+    color: #0f0e08;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 21px */
-  }
+    cursor: pointer;
 
+    @include hover(color, $secondary-color);
+  }
 
   &__line {
     display: block;
     grid-column: 1 / -1;
     height: 1px;
-    background: rgba(26, 90, 76, 0.50);
+    background: #1a5a6080;
     margin-top: 30px;
 
     @include onDesktop {
@@ -98,7 +100,7 @@
     gap: 10px;
 
     grid-column: 1 / -1;
-    padding: 40px 0 30px 0;
+    padding: 40px 0 30px;
 
     @include onTablet {
       flex-direction: row;
@@ -107,11 +109,11 @@
   }
 
   &__text-end {
-    color: #0F0E08;
+    color: #0f0e08;
     text-align: center;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 12px;
     font-weight: 300;
-    line-height: 140.625%;
+    line-height: 140.63%;
   }
 }
