--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -35,8 +35,7 @@
     padding-block: 20px;
 
     background-color: #fff;
-    box-shadow: 0px 2px 0 0 rgba(26, 90, 76, 0.25);
-
+    box-shadow: 0 2px #1a5a4c40;
 
     @include onTablet {
       height: 204px;
@@ -74,9 +73,9 @@
   }
 
   &__title {
-    color: #0F0E08;
+    color: #0f0e08;
     text-align: center;
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-style: normal;
     font-weight: 400;
