--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -3,6 +3,7 @@
   @include onDesktop {
     margin: 40px 0 0 102px;
   }
+
   &__list {
     display: flex;
     flex-direction: column;
@@ -12,7 +13,8 @@
     list-style: none;
   }
 
-  &__top, &__bottom {
+  &__top,
+  &__bottom {
     display: flex;
     gap: 28px;
 
@@ -20,31 +22,21 @@
       gap: 20px;
     }
 
-      @include onDesktop {
-        gap: 115px;
-      }
+    @include onDesktop {
+      gap: 115px;
     }
-
-
-  &__link {
-    white-space: nowrap;
-    width: fit-content;
-    color: #0F0E08;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%;
   }
 
   &__link {
     display: block;
     width: 100px;
-    color: #FFF;
+    color: #fff;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+
+    @include hover(transform, scale(1.1));
 
     @include onDesktop {
       width: 168px;
@@ -55,20 +47,23 @@
   }
 
   &__link-footer {
-    color: #0F0E08;
+    color: #0f0e08;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
+
+    @include hover(color, $secondary-color);
+
   }
 
-  &__list-footer{
-   display: grid;
-   grid-template-columns: repeat(2, 1fr);
-   grid-template-rows: repeat(2, 1fr);
-   gap: 20px;
- }
+  &__list-footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+  }
 }
 
 .footer__nav {
@@ -81,4 +76,5 @@
   @include onDesktop {
     grid-column: 8 / 11;
   }
+
 }
