--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,6 +15,10 @@
     &--with-menu {
       overflow: hidden;
       background-color: rgba(0,0,0,0.5);
+
+      .header__button {
+        pointer-events: none;
+      }
     }
   }
 
