fix text and photo

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -22,7 +22,7 @@
 
   &__img {
     width: 280px;
-    height: 410px;
+    height: 400px;
     @include hover(transform, scale(1.03));
     transition: $transition-time;
     cursor: pointer;
@@ -41,7 +41,7 @@
 
     &--wide {
       @include onTablet {
-        height: 543px;
+        height: auto;
         width: auto;
       }
 
