--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -89,7 +89,7 @@
     &-container {
       @include onTablet {
         display: grid;
-        align-items: center;
+        align-items: start;
         grid-template-columns: repeat(2, 1fr);
         column-gap: 34px;
       }
@@ -140,10 +140,14 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 34px;
+    column-gap: 134px;
     row-gap: 24px;
     list-style: none;
 
+    @include onTablet {
+      column-gap: 160px;
+      row-gap: 30px;
+    }
     @include onDesktop {
       column-gap: 60px;
       row-gap: 30px;
@@ -164,7 +168,6 @@
 }
 
 .shedule__item {
-  font-weight: 400;
   color: $c-title;
 
   &--aside {
@@ -175,6 +178,7 @@
 .time {
   font-weight: 600;
   color: $c-title;
+
   &--aside {
     color: $c-white;
   }
@@ -188,7 +192,7 @@
   }
 
   &-info {
-    font-weight: 400;
+    margin-top: 20px;
     color: $c-title;
     &--aside {
       color: $c-white;
