add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,39 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "blocks/page";
+@import "blocks/menu";
+@import "blocks/header";
+@import "blocks/nav";
+@import "blocks/tickets";
+@import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/rectangle";
+@import "blocks/subscription";
+@import "./blocks/footer";
+
+.icon {
+  height: 24px;
+  width: 24px;
+}
+
+.icon--menu {
+  background-image: url(/images/iconmenu.png);
+  position: absolute;
+  left: 20px;
+  top: 27px;
+
+  @include OnTablet {
+    left: 34px;
+    top: 39px;
+  }
+
+  @include OnDeskTop {
+    left: 55px;
+  }
+}
+
+.icon--close {
+  background-image: url(/images/ri-close-fill.png);
+  position: absolute;
 }
