--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,27 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin OnDeskTop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin OnTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin OnTabletMaxWidth {
+  @media (max-width: 1279px) {
+    @content;
+  }
+}
+
+@mixin OnMobile {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
