--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/header";
+@import "blocks/page";
+@import "blocks/top-bar";
+@import "utils/_mixins";
+@import "blocks/aside";
