--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -286,6 +286,8 @@
     font-weight: 300;
     line-height: 150%;
 
+    max-width: toRem(280);
+
     color: $mainColor;
 
     padding-top: toRem(10);
@@ -298,6 +300,16 @@
 
     @include onDesktop {
       max-width: toRem(370);
+    }
+  }
+
+  &__br--mobile-desktop {
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDesktop {
+      display: block;
     }
   }
 }
