--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -27,6 +27,13 @@
     &:target {
       transform: translateY(0);
       z-index: 1;
+      box-shadow: 0 0 0 100vh rgba(24, 24, 26, 0.5);
+      pointer-events: all;
     }
+  }
+
+  &:has(.page__menu:target) {
+    overflow: hidden;
+    pointer-events: none;
   }
 }
