--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,6 +8,7 @@ $buttonBorderColor: #1a5a4c;
 $buttonColor: #0f0e08;
 $subtitleColor: #687490;
 $iconBgColor: #f14a27;
+$disabledColor: #18181a;
 
 $minWidth: 320;
 $tabletMinWidth: 640px;
