add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,26 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/top-bar.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/wrapper.scss";
+@import "blocks/bottom.scss";
+@import "blocks/schedual.scss";
+@import "blocks/museum.scss";
+@import "blocks/main.scss";
+@import "blocks/ivents.scss";
+@import "blocks/card.scss";
+@import "blocks/lection.scss";
+@import "blocks/galery.scss";
+@import "blocks/slider.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/form.scss";
+
+@import "blocks/footer.scss";
+@import "blocks/top-part.scss";
+@import "blocks/midlle-part.scss";
+@import "blocks/links.scss";
