--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+$tablet-min-width: 756px;
+$smallDesktop-min-width: 1280px;
+$mediumDesktop-min-width: 1440px;
+
+$main-text-color: #000;
+$second-text-color: #0f0e08;
+$third-text-color: #fff;
+$forth-text-color: #687480;
+$five-text-color: #4e4e4e;
+
+$main-item-color: #1a5a4c;
+$second-item-color: #e0e0e0;
+$third-item-color: #f14a27;
