--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -31,7 +31,7 @@
 
   &__line {
     color: $third-text-color;
-    opacity: 50%;
+    opacity: .5;
     margin-bottom: 24px;
 
     @include onTablet {
