add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,9 +3,9 @@
   flex-direction: column;
   align-items: center;
 
-  @include OnDeskTop {
-    align-items: normal;
-  }
+  // @include OnDeskTop {
+  //   align-items: normal;
+  // }
 
   &__title {
     font-size: 36px;
@@ -36,6 +36,7 @@
     }
 
     &--3 {
+      height: 210px;
       width: 100vw;
     }
   }
@@ -175,6 +176,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    width: 100;
 
     @include OnTablet {
       width: 100%;
@@ -191,9 +193,12 @@
     @include OnDeskTop {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      // justify-content: space-between;
+      gap: 130px;
 
       margin-bottom: 104px;
+
+      // max-width: 1170px;
     }
   }
 }
