--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -30,6 +30,7 @@
     @include OnTablet {
       display: flex;
       gap: 20px;
+      align-self: center;
     }
 
     @include OnDeskTop {
@@ -38,6 +39,9 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
+      justify-content: center;
+
+      max-width: 1170px;
     }
 
     &--tablet {
