--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,11 +10,24 @@
   font-size: 16px;
   line-height: 100%;
 
+  overflow-x: hidden;
+
   scroll-behavior: smooth;
-  
+
   &__body {
     background: $c-gray;
     margin: 0;
+  }
+
+  &__mask {
+    width: 100vw;
+    height: 0;
+    opacity: 0.5;
+    background: #18181a;
+    position: absolute;
+    z-index: 1;
+
+    overflow: hidden;
   }
 
   &__menu {
@@ -25,6 +38,8 @@
 
     opacity: 0;
     pointer-events: none;
+
+    z-index: 2;
   }
 
   &__menu:target {
