--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -88,4 +88,32 @@
       height: 70px;
     }
   }
+
+  &__action {
+    display: flex;
+    flex-direction: column-reverse;
+
+    align-items: center;
+    gap: 20px;
+
+    @include OnTabletMaxWidth {
+      display: none;
+    }
+  }
+
+  &__verticle-text {
+    color: #687480;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 100%;
+
+    transform: rotate(-90deg);
+  }
+
+  &__verticle-line {
+    width: 1px;
+    height: 70px;
+    background-color: #1a5a4c;
+  }
 }
