add mobile version

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,12 +1,13 @@
 .aside {
   box-sizing: border-box;
-  height: 399px;
+  height: 100vh;
   width: 100%;
-  background-color: #1a5a4c;
+  background: rgba(24,24,26,0.5);
 
   &__container {
     @include contentPaddingInLine;
     padding-top: 27px;
+    background-color: #1a5a4c;
   }
 
   &__close {
@@ -15,5 +16,50 @@
     width: 24px;
 
     background-image: url(images/close-icon.svg);
+  }
+
+  &__top {
+    display: flex;
+    margin-bottom: 24px;
+  }
+
+  &__line {
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    margin-bottom: 24px;
+  }
+
+  &__text {
+    margin: 0;
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140.63%; /* 19.688px */
+  }
+
+  &__bold {
+    margin: 0;
+
+    color: #fff;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%;
+  }
+
+  &__head {
+    margin-bottom: 20px;
+  }
+
+  &__graph {
+    margin-bottom: 16px;
+  }
+
+  &__last {
+    padding-bottom: 27px ;
   }
 }
