--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,9 @@
 @import "blocks/top-bar";
 @import "utils/_mixins";
 @import "blocks/aside";
+@import "blocks/nav";
+@import "blocks/events";
+@import "blocks/lection";
+@import "blocks/galery";
+@import "blocks/subscribe";
+@import "blocks/footer";
