--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,33 @@
 .header {
   &__bottom {
     @include contentPaddingInLine;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+      grid-row: 1;
+      padding-inline: 0;
+      padding-left: 32px;
+    }
+  }
+
+  &__menu {
+    display: none;
+    width: 24px;
+    height: 24px;
+    background-image: url(images/menu-icon.svg);
+
+    @include onTablet {
+      margin-top: 39px;
+      margin-bottom: 64px;
+      display: block;
+    }
+  }
+
+  &__container {
+
+    @include onTablet {
+      @include pageGrid;
+    }
   }
 
   &__title {
@@ -13,6 +40,12 @@
     line-height: 100%; /* 45px */
 
     margin: 0;
+
+    @include onTablet {
+      font-size: 54px;
+      line-height: 120%;
+      text-align: left;
+    }
   }
 
   &__button {
@@ -27,11 +60,22 @@
     font-weight: 500;
     line-height: 100%; /* 16px */
 
+    @include onTablet {
+      height: 70px;
+      padding-inline: 68px;
+    }
+
     &__container {
       width: 100%;
       display: flex;
       margin-top: 20px;
       margin-bottom: 70px;
+
+      @include onTablet {
+        margin-bottom: 107px;
+        margin-top: 38px;
+        width: 270px;
+      }
     }
 
     &__second {
@@ -42,6 +86,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @include onTablet {
+        width: 70px;
+      }
     }
 
     &__arrow {
@@ -53,6 +101,10 @@
   }
 
   &__second__title {
+    margin: 0;
+    margin-bottom: 40px;
+    padding-inline: 20px;
+
     color: #0f0e08;
     text-align: center;
     font-family: "Montserrat", sans-serif;
@@ -60,5 +112,13 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%; /* 36px */
+
+    @include onTablet {
+      grid-column: 1 / -1;
+      text-align: left;
+      padding-left: 34px;
+      font-size: 48px;
+      margin-bottom: 48px;
+    }
   }
 }
