--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$black: #000;
+$white: #fff;
+$green: #1a5a4c;
+$grey: #4e4e4e;
+$orange: #f14a27;
+$text: #0f0e08;
+$text-grey: #687480;
