--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixins";
+@import "./utils/vars";
+@import "./utils/normalize";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header.scss";
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/container.scss";
+@import "./blocks/main.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
